@@ -390,3 +390,6 @@ z80_bit accessibility_enable_gui_sounds={0};
 
 //Dice que permite crear habitaciones desde cualquier ip, no solo localhost
 z80_bit zeng_online_allow_room_creation_from_any_ip={0};
+
+//Decir que se comprimen en zip los snapshots de zeng online
+z80_bit zeng_online_zip_compress_snapshots={1};
